Tweaked two style that had been bugging me. The numbers in the notifications are now perfectly centered, and the practice problem boxes now will not squish the rating systems.  I am calling it a day at this point.  The things that need to be undertaken (in order of precedence) tomorrow: - Change the Content.Body Entity field to a TEXT element (500 char max uncovered) - Write a form for accepting and saving answers to a problem (Big Task, but all of the little pieces have started to come together) - Add in Answers to the Content Dashboard - ... - ...
--- CHECKPOINT: Writing, editing and answering Practice Problems is flawless.

- Next Objective:  Writing, editing and answering Questions is flawless.

- Next next Objective:  Mathematical Typesetting

- NEXT NEXT NEXT BIG BIG BIG OBJECTIVE: RATING.  The behometh lurks...

--- a/war/_static/css/AdminLTE.css
+++ b/war/_static/css/AdminLTE.css
@@ -516,7 +516,7 @@ body > .header .navbar .nav > li > a > .label {
   height: 15px;
   line-height: 1.0em;
   text-align: center;
-  padding: 2px;
+  padding: 3px 3px 2px 3px;
 }
 body > .header .navbar .nav > li > a:hover > .label {
   top: 3px;
@@ -3879,5 +3879,9 @@ fieldset[disabled] .btn-vk.active {
 
 .box .box-header > .fa-karma-score{
 	padding: 12px 0px 8px 10px;
+}
+
+.practice-problem .box-body{
+	display: inline-block;
 }
 }
